Separando a mensagem da seção azul utilizando um align-items e também um justify-content, alterei o tamanho da fonte também (font-size) para tornar visualmente mais agradável e também alterei a localização das frases para todas ficarem dentro do ol assim, posso fazer a alteração para o texto como um todo

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -69,10 +69,15 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
 }
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    
 }
 
 #container-para-comprar {
